added the trained model

--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-19 16:02:35.292822: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-03-19 16:02:35.466966: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-03-19 16:02:35.470086: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-19 16:02:35.470104: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-19 16:02:36.189698: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-19 16:02:36.189764: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-19 16:02:36.189771: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow import keras\n",
     "import tensorflow as tf\n",
@@ -31,15 +46,13 @@
      "output_type": "stream",
      "text": [
       "Found 70295 images belonging to 38 classes.\n",
-      "Found 33 images belonging to 1 classes.\n",
       "Found 17572 images belonging to 38 classes.\n"
      ]
     }
    ],
    "source": [
-    "train=datagen.flow_from_directory('C:/Users/Hp/Desktop/project/agro-easy-/archive/New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/train/',class_mode='categorical',batch_size=32,target_size=(256,256))\n",
-    "test=datagen.flow_from_directory('C:/Users/Hp/Desktop/project/agro-easy-/archive/New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/test/',class_mode='categorical',batch_size=32,target_size=(256,256))\n",
-    "valid=datagen.flow_from_directory('C:/Users/Hp/Desktop/project/agro-easy-/archive/New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/valid/',class_mode='categorical',batch_size=32,target_size=(256,256))"
+    "train=datagen.flow_from_directory('/home/shiva1974/Desktop/data/New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/train/',class_mode='categorical',batch_size=32,target_size=(256,256))\n",
+    "valid=datagen.flow_from_directory('/home/shiva1974/Desktop/data/New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/valid/',class_mode='categorical',batch_size=32,target_size=(256,256))"
    ]
   },
   {
@@ -83,6 +96,17 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-19 16:02:47.710535: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2023-03-19 16:02:47.710561: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2023-03-19 16:02:47.710577: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (shiva1974-VivoBook-ASUSLaptop-X515JA-X515JA): /proc/driver/nvidia/version does not exist\n",
+      "2023-03-19 16:02:47.710796: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -210,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2197/2197 [==============================] - 12128s 6s/step - loss: 2.8576 - accuracy: 0.3032 - val_loss: 1.3779 - val_accuracy: 0.6161\n"
+      "2197/2197 [==============================] - 6541s 3s/step - loss: 2.4722 - accuracy: 0.3910 - val_loss: 1.2706 - val_accuracy: 0.6394\n"
      ]
     }
    ],
@@ -229,88 +253,90 @@
      "output_type": "stream",
      "text": [
       "Keras weights file (<HDF5 file \"variables.h5\" (mode r+)>) saving:\n",
-      "...layers\\batch_normalization\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      ".........2\n",
-      ".........3\n",
-      "...layers\\batch_normalization_1\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      ".........2\n",
-      ".........3\n",
-      "...layers\\batch_normalization_2\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      ".........2\n",
-      ".........3\n",
-      "...layers\\batch_normalization_3\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      ".........2\n",
-      ".........3\n",
-      "...layers\\batch_normalization_4\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      ".........2\n",
-      ".........3\n",
-      "...layers\\conv2d\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\conv2d_1\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\conv2d_2\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\conv2d_3\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\conv2d_4\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\dense\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\dense_1\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\dense_2\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...layers\\dropout\n",
-      "......vars\n",
-      "...layers\\dropout_1\n",
-      "......vars\n",
-      "...layers\\flatten\n",
-      "......vars\n",
-      "...layers\\max_pooling2d\n",
-      "......vars\n",
-      "...layers\\max_pooling2d_1\n",
-      "......vars\n",
-      "...layers\\max_pooling2d_2\n",
-      "......vars\n",
-      "...metrics\\mean\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
-      "...metrics\\mean_metric_wrapper\n",
-      "......vars\n",
-      ".........0\n",
-      ".........1\n",
+      "...layers\n",
+      "......batch_normalization\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "............2\n",
+      "............3\n",
+      "......batch_normalization_1\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "............2\n",
+      "............3\n",
+      "......batch_normalization_2\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "............2\n",
+      "............3\n",
+      "......batch_normalization_3\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "............2\n",
+      "............3\n",
+      "......batch_normalization_4\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "............2\n",
+      "............3\n",
+      "......conv2d\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......conv2d_1\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......conv2d_2\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......conv2d_3\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......conv2d_4\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......dense\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......dense_1\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......dense_2\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......dropout\n",
+      ".........vars\n",
+      "......dropout_1\n",
+      ".........vars\n",
+      "......flatten\n",
+      ".........vars\n",
+      "......max_pooling2d\n",
+      ".........vars\n",
+      "......max_pooling2d_1\n",
+      ".........vars\n",
+      "......max_pooling2d_2\n",
+      ".........vars\n",
+      "...metrics\n",
+      "......mean\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
+      "......mean_metric_wrapper\n",
+      ".........vars\n",
+      "............0\n",
+      "............1\n",
       "...optimizer\n",
       "......vars\n",
       ".........0\n",
@@ -369,9 +395,9 @@
       "...vars\n",
       "Keras model archive saving:\n",
       "File Name                                             Modified             Size\n",
-      "config.json                                    2023-02-21 13:44:41         8478\n",
-      "metadata.json                                  2023-02-21 13:44:41           64\n",
-      "variables.h5                                   2023-02-21 13:44:43    338995840\n"
+      "config.json                                    2023-03-19 18:11:43         8478\n",
+      "variables.h5                                   2023-03-19 18:11:43    338997192\n",
+      "metadata.json                                  2023-03-19 18:11:43           64\n"
      ]
     }
    ],
@@ -404,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
