put model on training

--- a/model.ipynb
+++ b/model.ipynb
@@ -9,14 +9,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-19 16:02:35.292822: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-19 16:02:35.466966: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-03-19 16:02:35.470086: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-19 16:02:35.470104: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-19 16:02:36.189698: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-19 16:02:36.189764: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-19 16:02:36.189771: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-07-25 22:07:09.909406: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-07-25 22:07:09.956640: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-07-25 22:07:10.219218: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-07-25 22:07:10.221053: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-07-25 22:07:11.939877: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -46,13 +44,15 @@
      "output_type": "stream",
      "text": [
       "Found 70295 images belonging to 38 classes.\n",
+      "Found 33 images belonging to 1 classes.\n",
       "Found 17572 images belonging to 38 classes.\n"
      ]
     }
    ],
    "source": [
-    "train=datagen.flow_from_directory('/home/shiva1974/Desktop/data/New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/train/',class_mode='categorical',batch_size=32,target_size=(256,256))\n",
-    "valid=datagen.flow_from_directory('/home/shiva1974/Desktop/data/New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/valid/',class_mode='categorical',batch_size=32,target_size=(256,256))"
+    "train = datagen.flow_from_directory('New Plant Diseases Dataset(Augmented)/train',class_mode='categorical',batch_size=32,target_size=(256,256))\n",
+    "test = datagen.flow_from_directory('test',class_mode='categorical',batch_size=32,target_size=(256,256))\n",
+    "valid = datagen.flow_from_directory('New Plant Diseases Dataset(Augmented)/valid',class_mode='categorical',batch_size=32,target_size=(256,256))"
    ]
   },
   {
@@ -96,17 +96,6 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-19 16:02:47.710535: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2023-03-19 16:02:47.710561: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2023-03-19 16:02:47.710577: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (shiva1974-VivoBook-ASUSLaptop-X515JA-X515JA): /proc/driver/nvidia/version does not exist\n",
-      "2023-03-19 16:02:47.710796: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -234,13 +223,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2197/2197 [==============================] - 6541s 3s/step - loss: 2.4722 - accuracy: 0.3910 - val_loss: 1.2706 - val_accuracy: 0.6394\n"
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-25 22:10:48.266473: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
+      "\t [[{{node Placeholder/_0}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   8/2197 [..............................] - ETA: 1:53:21 - loss: 18.4218 - accuracy: 0.0508"
      ]
     }
    ],
    "source": [
     "#trained with only one epoch beacause of gpu problem\n",
-    "history=model.fit(train,epochs=1,validation_data=valid)"
+    "history=model.fit(train,epochs=10,validation_data=valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('model.h5')"
    ]
   },
   {
